refactor: port client models and renderers to 26.1